new email fetchlog error report stack. builder makes the message, the fetchlog dao files retrieve from the db, the service is an http service we will hit with the jenkins task sched, the sender checks for context stettings and sends the message, SessionUtil is a util from the sedmap project that gets context vars with a default value, the changes to the pom ignore the integration tests that are data dependent, .gitignore is updated to ingnore my localfiles, finally the app context is updated to construct several springism classes for this stack

--- a/pom.xml
+++ b/pom.xml
@@ -312,6 +312,8 @@
 		        		<include>**/*IntegrationTest.java</include>
 		        	</includes>
 		        	<excludes>
+                        <!-- too dependent on data -->
+                        <exclude>**/FetchLogDaoMonitorTests.java</exclude>
 		        		<!-- too dependent on data providers -->
 		        		<exclude>**/PrefetchControllerIntegrationTest.java</exclude>
 		        		<!-- TODO set environment to prevent scheduled jobs from running...  -->
