--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,13 @@
 			<artifactId>jcl-over-slf4j</artifactId>
 			<version>1.6.4</version>
 		</dependency>
+		
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.1</version>
+            <scope>compile</scope>
+        </dependency>
 
 		<!-- Apache commons dependencies -->
 		<dependency>
