--- a/pom.xml
+++ b/pom.xml
@@ -286,6 +286,7 @@
 							<exclude>**/integration/**</exclude>
 		        			<exclude>**/functional/**</exclude>
 		        			<exclude>**/*IntegrationTest.java</exclude>
+		        			<exclude>**/FetchLogDAOTest.java</exclude>
 						</excludes>
 					</configuration>
 				</plugin>
