--- a/pom.xml
+++ b/pom.xml
@@ -286,7 +286,9 @@
 							<exclude>**/integration/**</exclude>
 		        			<exclude>**/functional/**</exclude>
 		        			<exclude>**/*IntegrationTest.java</exclude>
-		        			<exclude>**/FetchLogDAOTest.java</exclude>
+                            <exclude>**/FetchLogDAOTest.java</exclude>
+                            <exclude>**/ClientPropertiesTest.java</exclude>
+                            <exclude>**/FetchLogDaoMonitorTests.java</exclude>
 						</excludes>
 					</configuration>
 				</plugin>
