exclude integration tests - all tests seem to be integration test in that they load the broken appcontext

--- a/pom.xml
+++ b/pom.xml
@@ -285,7 +285,8 @@
 						<excludes>
 							<exclude>**/integration/**</exclude>
 		        			<exclude>**/functional/**</exclude>
-		        			<exclude>**/*IntegrationTest.java</exclude>
+                            <exclude>**/*IntegrationTest.java</exclude>
+                            <exclude>**/*Test.java</exclude>
 						</excludes>
 					</configuration>
 				</plugin>
